# nlp-pipeline

./: .dir-locals.el  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  Pipfile  README.md  build.clj  compose.prod.yml  compose.yml  deps.edn  docker-compose.yml  pom.xml  pyproject.toml  requirements.cuda.in  requirements.cuda.txt  requirements.dev.in  requirements.dev.txt  requirements.gpu.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  test.yml
certs/: ca-key.pem  ca.csr.json  ca.pem  queue-key.pem  queue.csr.json  queue.pem
dev/: user.clj
docker/db/: Dockerfile
docker/index/: .dockerignore  Dockerfile
docker/index/conf/: mtas.xml  schema.xml  solrconfig.xml
docker/index/conf/mtas/: csv.xml  folia.xml
gpt-gateway/: .dir-locals.el  .dockerignore  Dockerfile  deps.edn
gpt-gateway/dev/: user.clj
gpt-gateway/src/zdl/: gpt_gateway.clj
gpt-gateway/test/zdl/: gpt_gateway_test.clj
java/hfst/: Transducer.java
notebooks/: dwdsmor_coverage.clj  presentation.clj  senses.clj  simplemma_coverage.clj  tei_schema_analysis.clj
scripts/: mount-ddc-corpora
solr/: managed-schema.xml
src/dev/clojure/: user.clj
src/main/clojure/zdl/: fs.clj  gpt.clj  log.clj  python.clj  util.clj
src/main/clojure/zdl/ddc/: tabs.clj
src/main/clojure/zdl/gloss/: article.clj  few_shot.clj
src/main/clojure/zdl/nlp/: coverage.clj  deps.clj  flair.clj  gdex.clj  hash.clj  sbert.clj  simplemma.clj  spacy.clj
src/main/clojure/zdl/nlp/dwdsmor/: coverage.clj
src/main/clojure/zdl/nlp/gdex/: vulger.csv
src/main/clojure/zdl/nlp/simplemma/: lexicon.clj
src/main/clojure/zdl/nlp/spacy/: requirements.gpu.txt  tagger.py  util.py
src/main/clojure/zdl/xml/tei/: corpus.clj
src/main/clojure/zdl/xml/tei/corpus/: backup.clj
src/main/java/zdl/: Index.java
src/main/python/zdl/nlp/: annotate.py  colloc.py  conllu.py  ddc.py  models.py  polspeech.py
src/main/python/zdl/xml/: tei_schema.json
src/main/resources/zdl/xml/tei/: chunks.txt  containers.txt  milestones.txt
src/test/clojure/zdl/nlp/fixture/kafka/: kafka_hungerkuenstler_1922.TEI-P5.xml
src/zdl/: Document.java  Paragraph.java  Sentence.java  Span.java  Token.java  cli.clj  conllu.clj  db.clj  ddc.clj  env.clj  epub.py  gloss.clj  gpt.clj  korap.clj  log.clj  metadata.clj  nlp.clj  process.clj  python.clj  schema.clj  tagging-schema.edn  util.clj  xml.clj
src/zdl/ddc/: corpora.clj  query.clj  query_log.clj
src/zdl/gloss/: article.clj  few_shot.clj  rag.clj
src/zdl/korap/: koral.clj
src/zdl/nlp/: annotate.clj  annotation.clj  ddc.clj  deps.clj  dwdsmor.clj  env.clj  folia.clj  g2p.clj  gdex.clj  hash.clj  html.clj  index.clj  lab.clj  langid.clj  models.py  mtas.clj  rouge.clj  sbert.clj  spacy.clj  tagger.clj  tei.clj  tokenizer.clj  top_lemma.clj  transnormer.clj  util.clj  vis.clj  xml.clj  zdl-corpus.edn
src/zdl/nlp/ddc/: corpora.clj
src/zdl/nlp/dwdsmor/: coverage.clj
src/zdl/nlp/spacy/: requirements.cpu.txt
src/zdl/nlp/top_lemma/: kernbasis.top.edn  webxl.top.edn  zeitungenxl.top.edn
src/zdl/python/: requirements.gpu.txt
src/zdl/xml/: tei.clj
src/zdl/xml/tei/: chunks.txt  containers.txt  milestones.txt  paras.txt  schema.clj
src/zdl/xml/tei/corpus/: jsonl.clj
tei-schema/: deps.edn
tei-schema/src/: zdl_tei_schema.clj
test/: polspeech.anno.conll.xz
test/zdl/: IndexTest.java  conllu_test.clj  ddc_test.clj  nlp_test.clj  sample.conll
test/zdl/ddc/: sample.tabs  tabs_test.clj
test/zdl/nlp/: annotate_test.clj  fixture_test.clj  tagger_test.clj  vis_test.clj
test/zdl/nlp/fixture/: kafka.clj  political_speeches.clj
test/zdl/nlp/fixture/kafka/: kafka_hungerkuenstler_1922.TEI-P5.xml  kafka_prozess_1925.TEI-P5.xml
test/zdl/nlp/tei/: chunks_test.clj
tests/: conftest.py  test_annotate.py  test_colloc.py  test_examples.py  test_sbert.py
tests/__snapshots__/: test_colloc.ambr  test_sbert.ambr
zdl/: annotate.py  dwdsmor.py  flair.py  korap.py  lang.py  log.py  minhash.py  resources.py  simplemma.py  spacy.py  tei.py  trankit.py
zdl/spacy/: __init__.py  cli.py  colloc.py  dwdsmor.py  pipe.py
zdl/tei/: annotate.py  corpus-schema.csv  util.py
zdl_nlp/: annotate.py  colloc.py  conllu.py  corpora.py  dedupe.py  env.py  examples.py  korap.py  log.py  models.py  polspeech.py  sbert.py  segment.py  solr.py  tei.py  utils.py
zdl_nlp/annotate/: __init__.py  __main__.py
zdl_nlp/corpora/: convert.py  sources.py
zdl_nlp/ddc/: __init__.py  __main__.py  corpora.py  tabs.py
zdl_nlp/korap/: __init__.py  __main__.py
