[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zdl_nlp"
description = "Natural Language Processing Pipeline @ DWDS/ZDL"
authors = [
    {name = "Gregor Middell", email = "gregor.middell@bbaw.de"},
    {name = "Luise Köhler", email = "luise.koehler@bbaw.de"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.12"
dynamic = ["readme", "version"]
dependencies = [
    "conllu",
    "datasketch",
    "dwdsmor",
    "gdex @ git+https://github.com/zentrum-lexikographie/gdex.git@v1.5.2",
    "lingua-language-detector",
    "lxml",
    "python-dotenv",
    "requests",
    "SoMaJo",
    "sentence-transformers[openvino]",
    "spacy-models @ git+https://github.com/zentrum-lexikographie/spacy-models@v2.2.2",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-bugbear",
    "isort",
    "black",
    "mypy",
    "pre-commit",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/zentrum-lexikographie/nlp-pipeline"

[project.scripts]
zdl-nlp-annotate = "zdl_nlp.annotate:main"
zdl-nlp-colloc = "zdl_nlp.colloc:main"
zdl-nlp-ddc = "zdl_nlp.ddc.corpora:main"
zdl-nlp-ddc2conllu = "zdl_nlp.ddc.tabs:main"
zdl-nlp-install-models = "zdl_nlp.models:install"
zdl-nlp-polspeech = "zdl_nlp.polspeech:main"
zdl-nlp-txt2conllu = "zdl_nlp.segment:main"
zdl-nlp-tei2conllu = "zdl_nlp.tei:main"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.mypy]
disable_error_code = "import-untyped"
ignore_missing_imports = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "zdl_nlp.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
